--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@googlemaps/markerclusterer": "^2.6.2",
+    "@react-oauth/google": "^0.12.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
@@ -13,6 +14,7 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "axios": "^1.12.2",
+    "jwt-decode": "^4.0.0",
     "mapbox-gl": "^2.13.0",
     "maplibre-gl": "^5.8.0",
     "react": "^19.1.1",
