--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT=3001
 NODE_ENV=development
 REACT_APP_BACKEND_URL=http://localhost:3001
 REACT_APP_API_URL=http://localhost:8080/api
-
+REACT_APP_CLIENT_ID="255202154765-ff80kah50367qbbmods5oggb4d7j91fu.apps.googleusercontent.com"
 
 #The base URL for all locations. If your app is served from a sub-directory on your server, you'll want to set
 #this to the sub-directory. A properly formatted basename should have a leading slash, but no trailing slash.
