--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "axios": "^1.12.2",
+    "bootstrap": "^5.3.8",
     "jwt-decode": "^4.0.0",
     "mapbox-gl": "^2.13.0",
     "maplibre-gl": "^5.8.0",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-map-gl": "^8.0.4",
