--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^3.1.0",
     "@googlemaps/markerclusterer": "^2.6.2",
     "@react-oauth/google": "^0.12.2",
     "@testing-library/dom": "^10.4.1",
