--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "maplibre-gl": "^5.8.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
+    "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-map-gl": "^8.0.4",
@@ -54,6 +55,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
+    "@types/react-datepicker": "^7.0.0",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.5"
   }
