--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-map-gl": "^8.0.4",
     "react-router-dom": "^7.9.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
