--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^19.1.9",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "lucide-react": "^0.548.0",
     "mapbox-gl": "^2.13.0",
     "maplibre-gl": "^5.8.0",
     "react": "^19.1.1",
