--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3000
 NODE_ENV=development
-REACT_APP_BACKEND_URL=http://localhost:8080
-REACT_APP_API_URL=http://localhost:8080
+REACT_APP_BACKEND_URL=https://evrental-hjbfaxg0cbfgamha.eastasia-01.azurewebsites.net
+REACT_APP_API_URL=https://evrental-hjbfaxg0cbfgamha.eastasia-01.azurewebsites.net
 REACT_APP_CLIENT_ID=288020400119-9s3006qu2bgccr5a63h7a2nvla639eqr.apps.googleusercontent.com
 REACT_APP_OCR_API_KEY=9hFVTs5wPi3AIWAggQSk2HPtOFZQvLuH
 #The base URL for all locations. If your app is served from a sub-directory on your server, you'll want to set
