--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@types/react-dom": "^19.1.9",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.549.0",
     "mapbox-gl": "^2.13.0",
     "maplibre-gl": "^5.8.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
+    "react-chartjs-2": "^5.3.1",
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
