--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.552.0",
     "mapbox-gl": "^2.13.0",
     "maplibre-gl": "^5.8.0",
     "react": "^19.1.1",
