--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "web-thue-xe",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@fortawesome/react-fontawesome": "^3.1.0",
     "@googlemaps/markerclusterer": "^2.6.2",
