--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "chart.js": "^4.5.1",
+    "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.552.0",
     "mapbox-gl": "^2.13.0",
@@ -24,7 +25,8 @@
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.1",
-    "react-datepicker": "^8.8.0",
+    "react-date-range": "^2.0.1",
+    "react-datepicker": "^8.9.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-map-gl": "^8.0.4",
